--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-genie",
-  "version": "1.0.6",
-  "description": "This library was made by Syed Abrar Ali and Jawad Sheikh for automating repetitive tasks.",
+  "version": "1.2.1",
+  "description": "This library was made by Syed Abrar Ali and Jawad Sheikh for automating repetitive express routines.",
   "main": "index.js",
   "scripts": {
     "postinstall": "node addScript.js",
