--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-genie",
-  "version": "1.3.5",
-  "description": "This library was made by Syed Abrar Ali and Jawad Shaikh for automating repetitive express routines.",
+  "version": "2.0.0",
+  "description": "This library was made for automating repetitive express routines. Made by Syed Abrar Ali and Jawad Shaikh",
   "main": "index.js",
   "scripts": {
     "postinstall": "node addScript.js",
